<resources>
    <string name="app_name">Memento</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="explore">Explore</string>
    <string name="messages">Messages</string>
    <string name="add">Add</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="everyone">Everyone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="post">Post</string>
    <string name="log_out">Log Out</string>
    <string name="add_a_caption">Add a caption...</string>
    <string name="username">Username</string>
</resources>