<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Bottom navigation item: Explore screen -->
    <item
        android:id="@+id/nav_explore"
        android:icon="@drawable/ic_explore"
        android:title="@string/explore" />

    <!-- Bottom navigation item: Messages screen -->
    <item
        android:id="@+id/nav_messages"
        android:icon="@drawable/ic_messages"
        android:title="@string/messages" />

    <!-- Bottom navigation item: Add or Create action -->
    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/ic_add"
        android:title="@string/add" />

    <!-- Bottom navigation item: Notifications screen -->
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications" />

    <!-- Bottom navigation item: Profile screen -->
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>