<?xml version="1.0" encoding="utf-8"?>
<!-- Navigation graph for the mobile app -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <!-- HomeFragment: This is the start destination -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tomo.memento.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <!-- DashboardFragment: Shown when user navigates to the dashboard -->
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.tomo.memento.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <!-- NotificationsFragment: Shown when user navigates to notifications -->
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.tomo.memento.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

</navigation>